# bp-ort

./: .gitignore  Cargo.toml  Cargo.toml.patch  LICENSE  README.md  book.toml  default.nix  flake.nix  packaged-mod.nix  rust-toolchain.toml
.cargo/: config.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml
bp_ort/: Cargo.toml
bp_ort/src/: bindings.rs  lib.rs  screen_detour.rs  utils.rs
bp_ort/src/admin_abuse/: disguise.rs  grant_admin.rs  health.rs  mod.rs  slay.rs  switch.rs  teleport.rs
bp_ort/src/bots/: cmds_exec.rs  cmds_helper.rs  cmds_interface.rs  cmds_utils.rs  debug_commands.rs  detour.rs  mod.rs  netvars.rs  set_on_join.rs  simple_bot_manager.rs
bp_ort/src/bots/cmds/: basic_combat.rs  battery_yoinker.rs  hardpoint.rs  mod.rs  slide_hopper.rs
bp_ort/src/devtoys/: detour.rs  mod.rs  random_detour.rs  reversing_detour.rs
bp_ort/src/disguise/: concommands.rs  mod.rs  sqapi.rs
bp_ort/src/holoplus/: mod.rs
bp_ort/src/interfaces/: concommands.rs  mod.rs
bp_ort/src/navmesh/: bindings.rs  mod.rs  navigation.rs  sqapi.rs
bp_ort/src/scripts/: mod.rs
bp_ort/src/tickplus/: mod.rs
bspeater/: Cargo.toml
bspeater/src/: async_pathfinding.rs  behavior.rs  bindings.rs  cli.rs  debug.rs  export.rs  geoset_loader.rs  main.rs  mdl_loader.rs  pathfinding.rs  saving.rs
cat_or_not.BotExtras/: mod.json
cat_or_not.BotExtras/mod/scripts/vscripts/: bot_settings.gnut  bot_setup.gnut  bot_tictactoe.gnut  hooks.gnut
catalectic_cl/: Cargo.toml
catalectic_cl/src/: lib.rs
expressions/: bspeater.nix  cargo_lock.nix  crate_patch.nix  default.nix  mod.nix  navmeshes.nix  only_bspeater.patch  packaged-mod.nix  plugins.nix
manifest/: Resource.rc  manifest.json
octbots/: Cargo.toml
octbots/src/: async_pathfinding.rs  behavior.rs  gamemode_cp.rs  gamemode_ctf.rs  lib.rs  loader.rs  movement.rs  nav_points.rs  pathfinding.rs  sqapi.rs  svo.rs  targeting.rs
r2mole/: Cargo.toml
r2mole/src/: lib.rs
ranim/: Cargo.toml
ranim/src/: bindings.rs  lib.rs  recording_impl.rs  serde_ext.rs  sqapi.rs
serialized_io/: Cargo.toml
serialized_io/src/: lib.rs  preprocessor-og.rs  preprocessor.rs  rson_parser.rs  runtime_registration.rs  sqapi.rs  sqtypes.rs  utils.rs
shared/: Cargo.toml  build.rs
shared/src/: bindings.rs  cmds_helper.rs  interfaces.rs  lib.rs  plugin_interfaces.rs  squtils.rs  utils.rs
src/: bindings.rs  bots_cmds.rs  bots_convars.rs  bots_detour.rs  debug_commands.rs  hooks.rs  lib.rs  native_types.rs  screen_detour.rs  tf2dlls.rs  utils.rs
src/admin_abuse/: grant_admin.rs  health.rs  mod.rs  slay.rs  switch.rs  teleport.rs
src/bots/: cmds.rs  cmds_exec.rs  cmds_helper.rs  cmds_utils.rs  convars.rs  debug_commands.rs  detour.rs  mod.rs  navmesh.rs  netvars.rs  set_on_join.rs
src/bots/cmds/: basic_combat.rs  mod.rs
src/devtoys/: detour.rs  mod.rs  random_detour.rs  reversing_detour.rs
src/disguise/: concommands.rs  mod.rs
src/interfaces/: concommands.rs  hooks.rs  mod.rs
src/navmesh/: bindings.rs  mod.rs  navigation.rs  sqapi.rs
src/scripts/: mod.rs
src/structs/: cbaseclient.rs  cbaseplayer.rs  clientarray.rs  mod.rs
src/structs/bindings/: bindings.rs  cbaseclient_bindings.rs  cbaseplayer_bindings.rs  mod.rs
wiki/: SUMMARY.md  bp_ort.md  ranim.md  serialized_io.md
wiki/bp_ort/: admin_abuse.md  bots.md  name_overrides.md
wiki/serialized_io/: reflection.md  safe_io.md
