[workspace]
resolver = "2"

members = [
    "bp_ort", "octbots", "ranim", "shared",
]

[workspace.dependencies]
# rrplug = { path = "../rrplug" }
shared = { path = "shared" }
rrplug = { git = "https://github.com/catornot/rrplug.git" }

# for crates that deal with ub a lot 
[profile.release-ub]
inherits = "release"
strip = "true"
opt-level = 0
debug-assertions = false
