[workspace]
resolver = "3"

members = [
    "bp_ort", "bspeater", "octbots", "r2mole", "ranim", "shared",
]

[workspace.dependencies]
# rrplug = { path = "../rrplug" }
shared = { path = "shared" }
rrplug = { git = "https://github.com/catornot/rrplug.git" }
rustc_version = "0.4.1"

# for crates that deal with ub a lot 
[profile.release-ub]
inherits = "release"
strip = "true"
opt-level = 0
debug-assertions = false

[profile.dev.package."*"]
opt-level = 2
