[package]
name = "bp_ort"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1.16.0"
log = "*"
retour = { version = "0.3.1", features = ["static-detour"] }
rrplug = { path = "../../rrplug" }
rand  = "0.8.5"
windows-sys = { version = "0.48.0", features = ["Win32_System_LibraryLoader", "Win32_Foundation", "Win32_System_Console", "Win32_System_Diagnostics_Debug", "Win32_System_Threading"] }
libc = "0.2.148"
thiserror = "1.0.57"
itertools = "0.12.1"
chrono = { version = "0.4.38", features = ["clock", "std", "winapi", "windows-targets"], default-features = true }
# rrplug = { git = "https://github.com/catornot/rrplug.git" }

[lib]
crate-type = ["cdylib"]

[features]
release = []
