[package]
name = "bp_ort"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1.16.0"
log = "*"
retour = { version = "0.3.1", features = ["static-detour"] }
shared = { workspace = true }
rrplug = { workspace = true }
rand  = "0.8.5"
windows-sys = { version = "0.48.0", features = ["Win32_System_LibraryLoader", "Win32_Foundation", "Win32_System_Console", "Win32_System_Diagnostics_Debug", "Win32_System_Threading"] }
libc = "0.2.*"
thiserror = "1.0.57"
itertools = "0.12.1"
chrono = { version = "0.4.38", features = ["clock", "std", "winapi", "windows-targets"], default-features = true }
parking_lot = "*"

[lib]
crate-type = ["cdylib"]

# this doesn't even fix it lol
# this crate doesn't work in release otherwise (quite a bummer but eh)
# [profile.release]
# strip = "true"
# opt-level = 0
# debug-assertions = false
