[package]
name = "bp_ort"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
once_cell = "1.16.0"
log = "*"
retour = { version = "0.3.1", features = ["static-detour"] }
shared = { workspace = true }
rrplug = { workspace = true }
rand  = "0.8.5"
windows-sys = { workspace = true }
libc = "0.2.*"
thiserror = "1.0.57"
itertools = { workspace = true }
chrono = { version = "0.4.38", features = ["clock", "std", "winapi", "windows-targets"], default-features = true }
parking_lot = "*"

[lib]
crate-type = ["cdylib"]

# this doesn't even fix it lol
# this crate doesn't work in release otherwise (quite a bummer but eh)
# [profile.release]
# strip = "true"
# opt-level = 0
# debug-assertions = false
