[package]
name = "bspeater"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
avian3d = { version = "0.5.*", features = ["simd", "parry-f32", "bevy_picking", "parallel", "f32", "3d", "collider-from-mesh"], default-features = false }
bevy = { version = "0.18.*", features = ["wayland", "x11", "3d"], default-features = false }
clap = { version = "4.5.39", features = ["derive"] }
itertools = { workspace = true }
modular-bitfield = "0.12.0"
oktree = { version = "0.5.*", features = ["bevy"] }
rayon = "1.*"
bytemuck = { version = "1.23.1", features = ["derive", "pod_saturating"] }
anyhow = { version = "1.0.99", features = ["backtrace"] }
rkyv = "=0.8.10"
parking_lot = "0.12.4"
flume = { version = "0.11.1", default-features = false }
bonsai-bt = "0.10.0"
indexmap = "2.11.4"
rustc-hash = "2.1.1"
hexasphere = "16.0.0"

[features]
default = ["graphics"]
graphics = ["oktree/bevy", "bevy/wayland", "bevy/wayland", "bevy/free_camera", "avian3d/debug-plugin"]
