[package]
name = "octbots"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "*"
rrplug = { workspace = true }
shared = { workspace = true }
parking_lot = "*"
once_cell = "*"
libc = "0.2.*"
bincode = { version = "2.0.1", features = ["derive"] }
oktree = { version = "0.5.0", default-features = false, features = ["std"] }
bonsai-bt = { version = "0.10.0", features = [] }
indexmap = "2.*"
rustc-hash = "2.*"
itertools = { workspace = true }
bevy_math = { version = "0.16.1", default-features = false, features = ["std"] }
# crossbeam = { git = "https://github.com/ibraheemdev/crossbeam.git", version = "0.8.4", features = ["crossbeam-channel"], ref = "5a856843d959ba4c40a7a13e3e338f406f82d409" }

[lib]
crate-type = ["cdylib"]
