[package]
name = "octbots"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
log = "*"
rrplug = { workspace = true, features = ["async_engine"] }
shared = { workspace = true }
parking_lot = "*"
once_cell = "*"
libc = "0.2.*"
oktree = { version = "0.5.0", default-features = false, features = ["std"] }
bonsai-bt = { version = "0.10.0", features = [] }
indexmap = "2.*"
rustc-hash = "2.*"
itertools = { workspace = true }
bevy_math = { version = "0.16.1", default-features = false, features = ["std"] }
flume = { version = "0.11.1", default-features = false }
rkyv = "=0.8.10"
parry3d = { version = "0.25.*", features = ["simd-stable"] }

[lib]
crate-type = ["cdylib"]
