[package]
name = "r2mole"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
retour = { version = "0.3.1", features = ["static-detour"] }
shared = { workspace = true }
rrplug = { workspace = true }
windows-sys = { version = "0.48.0", features = ["Win32_System_LibraryLoader", "Win32_Foundation", "Win32_System_Console", "Win32_System_Diagnostics_Debug", "Win32_System_Threading", "Win32_Networking_WinSock"] }

[lib]
crate-type = ["cdylib"]
