[package]
name = "serialized_io"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ron = "0.12.0"
rrplug = { workspace = true, features = ["async_engine"] }

[lib]
crate-type = ["cdylib"]
