[package]
name = "serialized_io"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqparse = "0.3.0"
retour = { version = "0.3.*", features = ["static-detour"] }
ron = "0.12.0"
rrplug = { workspace = true, features = ["async_engine"] }
shared = { workspace = true }
parking_lot = "*"
serde_json = { version = "1.0.*", features = ["preserve_order", "raw_value"] }

[lib]
crate-type = ["cdylib"]
